Closed Bug 671965 Opened 13 years ago Closed 13 years ago

failure to report invalid pop3 account password when auth logon fails

Categories

(MailNews Core :: Networking: POP, defect, P3)

x86
Windows XP

Tracking

(blocking-thunderbird3.1 -, thunderbird7 fixed)

RESOLVED FIXED
Thunderbird 8.0
Tracking Status
blocking-thunderbird3.1 --- -
thunderbird7 --- fixed

People

(Reporter: Bienvenu, Assigned: Bienvenu)

References

(Blocks 2 open bugs)

Details

(Keywords: dogfood)

Attachments

(1 file, 1 obsolete file)

Attached patch proposed fix with unit test (obsolete) — Splinter Review
+++ This bug was initially created as a clone of Bug #428611 +++ Using trunk build Gecko/2008041001 I go to my pop3 account, and click "Get Messages". I do not store my password for this email account in password manager, so I get a password prompt, and I enter an utterly bogus password. Expected result: get a dialog asking me to re-enter my password Actual result: It appears to behave as if the password is correct, but there is no new email. If I again attempt to "Get messages for account", it does not prompt me for a pasword again. Instead, the progress meter shows apparent progress, followed by no result, no new messages. But there is NO indication that I have entered an incorrect password.
Attachment #546225 - Flags: review?(mbanner)
Already filed as bug 588761 (but wrongly marked FIXED).
Comment on attachment 546225 [details] [diff] [review] proposed fix with unit test actually, Ben might be able to review this sooner...
Attachment #546225 - Flags: review?(mbanner) → review?(ben.bucksch)
I deserve the spotlight after the last comment :), but I'm travelling for the next weeks, so I can't, for lack of time, sorry. (And plus I don't understand why you believe this change fixes the bug, so I can't vouch for lack of understanding.)
Comment on attachment 546225 [details] [diff] [review] proposed fix with unit test ah, back to Mark, then. I know this fixes the instance of the bug that I was able to recreate with a server provided by a user who encountered this bug, and verified that this patch fixed the bug. And I verified that the unit test fails w/o the patch, and succeeds with the patch. The basic issue is that if the server drops the connection after AUTH LOGIN, next_state_after_response is POP3_AUTH_LOGIN_RESPONSE, not POP3_NEXT_AUTH_STEP.
Attachment #546225 - Flags: review?(ben.bucksch) → review?(mbanner)
Attachment #546225 - Attachment is obsolete: true
Attachment #546242 - Flags: review?(mbanner)
Attachment #546225 - Flags: review?(mbanner)
Attachment #546242 - Flags: review?(mbanner) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 8.0
Comment on attachment 546242 [details] [diff] [review] fix typos in prev patch, and include xpcshell.ini in diff would be really nice to get this fix into TB 7
Attachment #546242 - Flags: approval-comm-aurora?
Attachment #546242 - Flags: approval-comm-aurora? → approval-comm-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: