fix bug 671965, failure to report invalid pop3 account password when auth login fails, r=standard8